Fix page cropping on chrome
Entire TrakMap fits on one page.

Fixes #10

--- a/src/main.css
+++ b/src/main.css
@@ -21,6 +21,12 @@ body {
     width: 90%;
 }
 
+/* Page */
+.trakMapPage { 
+    width: 100%;
+    height: auto;
+}
+
 /* menu bar */
 .menubar {
     padding: 0px;   
